2002-04-11  Jeff Freedman  <jeff@amy.nerble.net>

	* drag.cc (Dragging_info): If quantity-object is okay_to_take,
	make sure the part that's split off also is.

2002-04-09  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes/vgafile.cc (Shape): Reset() sets frames=0, fixing a crash
	in ExultStudio.
	* mapedit/shapelst.cc:  First pass at creating a shape from a font
	file.

2002-04-09  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* configure.in, acconfig.h: Test for Freetype2.

2002-04-09  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* VideoOptions_gump.cc: minor change for Solaris

2002-04-09  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.in, mapedit/Makefile.am: cleaned up gtk/libglade conditionals

2002-04-08  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/xml: added exult_studio.xml (ExultStudio Documentation)
		    updated docs.xml, faq.xml, docs.dtd, *.xsl
	* docs/ReadMe.html, FAQ.html, exult_studio.txt updated.
	  added exult_studio.html
	* FAQ, Readme updated

2002-04-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* game.cc: applied patch by Paul Hebble:
	'savegame_path', 'static_path' and 'gamedat_path' in exult.cfg
	* data/credits.txt: included Paul Hebble

2002-04-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/shapelst.*: don't take address of overloaded function

2002-04-06  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/studio.cc (ExultStudio): Copy files from
	'data/estudio/new' to new game's 'static' directory.

	* files/utils.{cc,h}:  U7copy copies a file.

2002-04-05  Jeff Freedman  <jeff@amy.nerble.net>

	* monsters.{cc,h}:  In_world linking rewritten.
	* actorio.cc: Use move() to place actors in world.

2002-04-05  Dominik Reichardt <gigdr@tesionmail.de>
	* tools/shp2pcx.txt, splitshp.txt, textpack.txt added, expack.txt updated.
  	  According to Robert Bihlmeyer's manuals
	* docs/exultstudio.txt added.  First draft based on Robert Bihlmeyer's manual
